--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,19 +12,17 @@
   preview={brownian-motion.gif}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
 
+@article{einstein1950meaning,
+  bibtex_show={true},
+  title={A machine learning based branch-cut-and-Benders for dock assignment and truck scheduling problem in cross-docks},
+  author={Monemi, Rahimeh Neamatian and Gelareh, Shahin and Maculan, Nelson},
+  journal={Transportation Research Part E: Logistics and Transportation Review},
+  volume={178},
+  pages={103263},
+  year={2023},
+  publisher={Elsevier}
+}
 @article{PhysRev.47.777,
   abbr={PhysRev},
   title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
