--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -31,7 +31,9 @@
   volume={178},
   pages={103263},
   year={2023},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  dimensions={true},
+  selected={true}
 }
 @article{PhysRev.47.777,
   abbr={PhysRev},
