bib items added

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,3 +15,38 @@
   selected={true}
 }
 
+
+@article{monemi2023dock,
+ abbr={COR},
+  title={Dock assignment and truck scheduling problem; consideration of multiple scenarios with resource allocation constraints},
+  author={Monemi, Rahimeh Neamatian and Gelareh, Shahin},
+  journal={Computers \& Operations Research},
+  volume={151},
+  pages={106074},
+  year={2023},
+  publisher={Elsevier},
+  dimensions={true},
+  selected={true}
+}
+
+
+@article{gelareh2021note,
+  title={A note on “Variable Neighborhood Search Based Algorithms for Crossdock Truck Assignment”},
+  author={Gelareh, Shahin},
+  journal={RAIRO-Operations Research},
+  volume={55},
+  number={5},
+  pages={2763--2768},
+  year={2021},
+  publisher={EDP Sciences},
+  dimensions={true},
+  selected={true}
+}
+@inproceedings{karabulut2022long,
+  title={Long-term corrosion monitoring: A prediction tool using the “SOCORRO” system.},
+  author={Karabulut, Burak and Verhoeven, Brent and Potters, Geert and Gelareh, Shahin and Dewil, Raf},
+  booktitle={The European Corrosion Congress, Date: 2022/08/28-2022/09/01, Location: Berlin, Germany},
+  year={2022},
+  dimensions={true},
+  selected={true}
+}
