--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -14,7 +14,7 @@
   dimensions={true},
   selected={true}
 }
-@article{aaaa,
+@article{monemi2023dock,
   abbr={TRE},
   title={A machine learning based branch-cut-and-Benders for dock assignment and truck scheduling problem in cross-docks},
   author={Monemi, Rahimeh Neamatian and Gelareh, Shahin and Maculan, Nelson},
@@ -26,22 +26,8 @@
   dimensions={true},
   selected={true}
 }
-
-@article{monemi2023dock,
- abbr={COR},
-  title={Dock assignment and truck scheduling problem; consideration of multiple scenarios with resource allocation constraints},
-  author={Monemi, Rahimeh Neamatian and Gelareh, Shahin},
-  journal={Computers \& Operations Research},
-  volume={151},
-  pages={106074},
-  year={2023},
-  publisher={Elsevier},
-  dimensions={true},
-  selected={true}
-}
-
-
 @article{gelareh2021note,
+  abbr={RAIRO},
   title={A note on “Variable Neighborhood Search Based Algorithms for Crossdock Truck Assignment”},
   author={Gelareh, Shahin},
   journal={RAIRO-Operations Research},
