--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,9 +10,7 @@
   volume={178},
   pages={103263},
   year={2023},
-  publisher={Elsevier},
-  dimensions={true},
-  selected={true}
+  publisher={Elsevier}
 }
 @article{monemi2023dock,
   abbr={TRE},
