--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,6 @@
 ---
 ---
 
-
 @article{monemi2023machine,
   abbr={TRE},
   title={A machine learning based branch-cut-and-Benders for dock assignment and truck scheduling problem in cross-docks},
@@ -10,7 +9,9 @@
   volume={178},
   pages={103263},
   year={2023},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  dimensions={true},
+  selected={true}
 }
 @article{monemi2023dock,
   abbr={TRE},
