--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -15,11 +15,11 @@
 }
 @article{monemi2023dock,
   abbr={TRE},
-  title={A machine learning based branch-cut-and-Benders for dock assignment and truck scheduling problem in cross-docks},
-  author={Monemi, Rahimeh Neamatian and Gelareh, Shahin and Maculan, Nelson},
-  journal={Transportation Research Part E: Logistics and Transportation Review},
-  volume={178},
-  pages={103263},
+  title={Dock assignment and truck scheduling problem; consideration of multiple scenarios with resource allocation constraints},
+  author={Monemi, Rahimeh Neamatian and Gelareh, Shahin},
+  journal={Computers \& Operations Research},
+  volume={151},
+  pages={106074},
   year={2023},
   publisher={Elsevier},
   dimensions={true},
@@ -42,7 +42,5 @@
   title={Long-term corrosion monitoring: A prediction tool using the “SOCORRO” system.},
   author={Karabulut, Burak and Verhoeven, Brent and Potters, Geert and Gelareh, Shahin and Dewil, Raf},
   booktitle={The European Corrosion Congress, Date: 2022/08/28-2022/09/01, Location: Berlin, Germany},
-  year={2022},
-  dimensions={true},
-  selected={true}
+  year={2022}
 }
