acronyms and bibs work

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -42,5 +42,7 @@
   title={Long-term corrosion monitoring: A prediction tool using the “SOCORRO” system.},
   author={Karabulut, Burak and Verhoeven, Brent and Potters, Geert and Gelareh, Shahin and Dewil, Raf},
   booktitle={The European Corrosion Congress, Date: 2022/08/28-2022/09/01, Location: Berlin, Germany},
-  year={2022}
+  year={2022},
+  dimensions={true},
+  selected={true}
 }
