recent publications added

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,13 +5,18 @@
   abbr={TRE},
   title={A machine learning based branch-cut-and-Benders for dock assignment and truck scheduling problem in cross-docks},
   author={Monemi, Rahimeh Neamatian and Gelareh, Shahin and Maculan, Nelson},
+  abstract = {In this work, we study the dock-door assignment and truck scheduling problem in cross-docks with an intraday planning horizon. This timeframe allows us to view the problem as a repeating operation with a frequency of 24 h. In practice, this repeating process follows a certain distribution, which is largely sustained even if we extend the horizon. While several modeling approaches and efficient solution algorithms have been proposed for various problem variations, the utilization of decomposition techniques in exact mathematical programming methods has been the most effective. Surprisingly, none of these techniques have taken advantage of the repeating patterns inherent in the problem. We start with a recently proposed compact model that is well-designed and can be exploited in a primal (Benders) decomposition technique, although it cannot be directly used to solve a practical-sized problem. We show that its modeling deficiencies can be fixed and propose a Benders decomposition framework together with several Alternative Objective Functions (AOFs) to generate customized Benders cuts, along with other valid inequalities that can be identified and separated. A classifier is trained to identify the most efficient AOF to use at different stages of the Benders iterations, to help avoid saturation of the master problem with dominated Benders cuts. Our extensive computational experiments confirm the significant performance improvement in the comparable decomposition framework.},
+  doi={10.1016/j.tre.2023.103263},
+  url={https://www.sciencedirect.com/science/article/pii/S136655452300251X},
+  html={https://www.sciencedirect.com/science/article/pii/S136655452300251X},
   journal={Transportation Research Part E: Logistics and Transportation Review},
   volume={178},
   pages={103263},
   year={2023},
   publisher={Elsevier},
   dimensions={true},
-  selected={true}
+  selected={true},
+  bibtex_show={true}
 }
 @article{monemi2023dock,
   abbr={TRE},
@@ -23,7 +28,8 @@
   year={2023},
   publisher={Elsevier},
   dimensions={true},
-  selected={true}
+  selected={true},
+  bibtex_show={true}
 }
 @article{gelareh2021note,
   abbr={RAIRO},
@@ -46,3 +52,72 @@
   dimensions={true},
   selected={true}
 }
+
+
+@article{monemi2021bi,
+  title={Bi-objective load balancing multiple allocation hub location: a compromise programming approach},
+  author={Monemi, Rahimeh Neamatian and Gelareh, Shahin and Nagih, Anass and Jones, Dylan},
+  journal={Annals of Operations Research},
+  volume={296},
+  number={1-2},
+  pages={363--406},
+  year={2021},
+  publisher={Springer}
+}
+@article{monemi2021multi,
+  title={Multi-period hub location problem with serial demands: A case study of humanitarian aids distribution in Lebanon},
+  author={Monemi, Rahimeh Neamatian and Gelareh, Shahin and Nagih, Anass and Maculan, Nelson and Danach, Kassem},
+  journal={Transportation Research Part E: Logistics and Transportation Review},
+  volume={149},
+  pages={102201},
+  year={2021},
+  publisher={Elsevier}
+}
+@article{kemmar2021hub,
+  abbr={RAIRO},
+  title={Hub location problem in round-trip service applications},
+  author={Kemmar, Omar and Bouamrane, Karim and Gelareh, Shahin},
+  journal={RAIRO-Operations Research},
+  volume={55},
+  pages={S2831--S2858},
+  year={2021},
+  publisher={EDP Sciences}
+}
+
+@article{gelareh2020comparative,
+  abbr={Omega},
+  title={A comparative study of formulations for a cross-dock door assignment problem},
+  author={Gelareh, Shahin and Glover, Fred and Guemri, Oualid and Hanafi, Sa{\"\i}d and Nduwayo, Placide and Todosijevi{\'c}, Raca},
+  journal={Omega},
+  volume={91},
+  pages={102015},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@inproceedings{monemi2022dock,
+  abbr={ROADEF},
+  title={Dock Assignment and Truck Scheduling in Crossdocks},
+  author={Monemi, Rahimeh N and Gelareh, Shahin},
+  booktitle={23{\`e}me congr{\`e}s annuel de la Soci{\'e}t{\'e} Fran{\c{c}}aise de Recherche Op{\'e}rationnelle et d'Aide {\`a} la D{\'e}cision},
+  year={2022}
+}
+
+@article{gelareh2020selective,
+  abbr={JOH},
+  title={The selective traveling salesman problem with draft limits},
+  author={Gelareh, Shahin and Gendron, Bernard and Hanafi, Sa{\"\i}d and Neamatian Monemi, Rahimeh and Todosijevi{\'c}, Raca},
+  journal={Journal of Heuristics},
+  volume={26},
+  pages={339--352},
+  year={2020},
+  publisher={Springer}
+}
+@article{gelareh2019note,
+  abbr={ArXive},
+  title={A note on'Collaborative hub location problem under cost uncertainty'},
+  author={Gelareh, Shahin},
+  journal={arXiv preprint arXiv:1910.02044},
+  year={2019}
+}
+
