--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,6 +21,10 @@
 @article{monemi2023dock,
   abbr={TRE},
   title={Dock assignment and truck scheduling problem; consideration of multiple scenarios with resource allocation constraints},
+  abstract = {The notion of ‘resource’ plays an important role in the overall efficiency and performance of most cross-docks. The processing time can often be described in terms of the resources allocated to different trucks. Conversely, for a given processing time, different combinations of resources can be prescribed. We study the problem of truck scheduling and dock assignment in the presence of resource constraints. In the absence of a closed-form (or well-defined) linear formulation describing the processing times as a function of resources, expert’ knowledge has been mobilized to enable modelling of the problem as an integer linear model. Two cases are taken into account: In the first one, the expert believes in his/her estimation of the processing time for every truck and only proposes a different combination of resources for his/her estimation, while in the second one the expert proposes a limited number of resource deployment scenarios for serving trucks, each of which has a different combination of resources and different processing times. We propose a novel compact integer programming formulation for the problem, which is particularly designed with an embedded structure that can be exploited in dual decomposition techniques with a remarkably computationally efficient column generation approach in this case. The case in which a scenario with invariant processing time is considered and modelled as a special case of the proposed model. Since a direct application of commercial solvers such as CPLEX to solve instances of this problem is not realistic, we propose a branch-and-price framework and, moreover, several classes of valid inequalities. Our extensive computational experiments confirm that the proposed exact solution framework is very efficient and viable in solving real-size instances of the practice and in a reasonable amount of time.},
+  doi={10.1016/j.cor.2022.106074},
+  url={https://www.sciencedirect.com/science/article/pii/S0305054822003045},
+  html={https://www.sciencedirect.com/science/article/pii/S0305054822003045},
   author={Monemi, Rahimeh Neamatian and Gelareh, Shahin},
   journal={Computers \& Operations Research},
   volume={151},
@@ -34,6 +38,15 @@
 @article{gelareh2021note,
   abbr={RAIRO},
   title={A note on “Variable Neighborhood Search Based Algorithms for Crossdock Truck Assignment”},
+  abstract = {Some implementations of variable neighborhood search based algorithms were presented
+  in “Daquin et al. RAIRO: OR 55 (2021) 2291–2323”. This work is based on model in “Miao et al. Eur.
+  J. Oper. Res. 192 (2009) 105–115” which has been proven to be incorrect. We reiterate and elaborate
+  on the deficiencies in the latter and show that the authors in the former were already aware of the
+  deficiencies in the latter and the proposed minor amendment does not overcome any of such deficiencies.},
+  doi={10.1051/ro/2021132},
+  url={https://www.rairo-ro.org/articles/ro/pdf/2021/06/ro210307.pdf},
+  html={https://www.rairo-ro.org/articles/ro/pdf/2021/06/ro210307.pdf},
+  pdf={https://www.rairo-ro.org/articles/ro/pdf/2021/06/ro210307.pdf},
   author={Gelareh, Shahin},
   journal={RAIRO-Operations Research},
   volume={55},
